# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.95 - XXX

  From Steven Knight:

  - Fix EnsureSConsVersion() so it checks against the SCons version,
    not the Python version, on Pythons with sys.version_info.

  - Don't swallow the AttributeError when someone uses an expansion like
    $TARGET.bak, so we can supply a more informative error message.

  - Fix an odd double-quote escape sequence in the man page.

  - Fix looking up a naked drive letter as a directory (Dir('C:')).

  - Support using File nodes in the LIBS construction variable.

  - Allow the LIBS construction variable to be a single string or File
    node, not a list, when only one library is needed.



RELEASE 0.94 - Fri, 07 Nov 2003 05:29:48 -0600

  From Hartmut Goebel:

  - Add several new types of canned functions to help create options:
    BoolOption(), EnumOption(), ListOption(), PackageOption(),
    PathOption().

  From Steven Knight:

  - Fix use of CPPDEFINES with C++ source files.

  - Fix env.Append() when the operand is an object with a __cmp__()
    method (like a Scanner instance).

  - Fix subclassing the Environment and Scanner classes.

  - Add BUILD_TARGETS, COMMAND_LINE_TARGETS and DEFAULT_TARGETS variables.

  From Steve Leblanc:

  - SGI fixes:  Fix C++ compilation, add a separate Tool/sgic++.py module.

  From Gary Oberbrunner:

  - Fix how the man page un-indents after examples in some browsers.

  From Vincent Risi:

  - Fix the C and C++ tool specifications for AIX.



RELEASE 0.93 - Thu, 23 Oct 2003 07:26:55 -0500

  From J.T. Conklin:

  - On POSIX, execute commands with the more modern os.spawnvpe()
    function, if it's available.

  - Scan .S, .spp and .SPP files for C preprocessor dependencies.

  - Refactor the Job.Parallel() class to use a thread pool without a
    condition variable.  This improves parallel build performance and